updated builder icon style rules for delete node

--- a/css/builder_styles.css
+++ b/css/builder_styles.css
@@ -1100,7 +1100,7 @@ select.form-control {
     fill: #eff6ff;
 }
 
-.icon-interaction-info circle {
+.builder-icon.delete-icon {
     stroke: #f97316;
 }
 
@@ -1139,6 +1139,9 @@ select.form-control {
 .builder-icon text {
     transition: font-size 0.2s ease;
     pointer-events: none;
+}
+.builder-icon.edit-icon text {
+    rotate: -45deg; 
 }
 
 .builder-icon path {
